# rs3www

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  image.nix
nix/: rust.nix  treefmt.nix
src/: adapter.rs  config.rs  content_type.rs  error.rs  main.rs  s3.rs
src/directory/: explorer.rs  index.rs  mod.rs
templates/: explorer.html
