[package]
name = "rs3www"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
aws-config = "1.8.6"
aws-sdk-s3 = "1.104.0"
aws-smithy-http = "0.62.3"
axum = "0.8.4"
config = "0.15.15"
futures-core = "0.3.31"
hyper = "1.7.0"
moka = { version = "0.12.10", features = ["future"] }
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
